# glimmerite

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CREDITS.md  Doxyfile  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: CMakeLists.txt
examples/1-helloworld/: CMakeLists.txt  helloworld.cpp
examples/2-sprites/: CMakeLists.txt  sprites.cpp
examples/3-graphics/: CMakeLists.txt  graphics.cpp
examples/4-screensaver/: CMakeLists.txt  screensaver.cpp
examples/5-collisions/: CMakeLists.txt  collisions.cpp
include/gmi/: Application.h  Backend.h  Color.h  Container.h  Drawable.h  Graphics.h  Renderer.h  SoundManager.h  Sprite.h  Texture.h  TextureManager.h  Tween.h  TweenManager.h  Vertex.h  gmi.h
include/gmi/client/: Affine.h  Application.h  Color.h  Container.h  Drawable.h  Graphics.h  Renderer.h  SoundManager.h  Sprite.h  Text.h  TextureManager.h  Transform.h  TweenManager.h  Vertex.h  gmi.h
include/gmi/math/: Affine.h  BitStream.h  Buffer.h  Easing.h  Geometry.h  Grid.h  Rect.h  Shape.h  Size.h  Transform.h  Tween.h  Vec2.h  Vertex.h  collision.h  math.h  random.h
include/gmi/misc/: BitStream.h  Buffer.h
include/gmi/renderers/sdl/: SdlRenderer.h
include/gmi/util/: Color.h  spritesheet.h  util.h
shaders/color/: varying.def.sc
shaders/sprite/: fs_sprite.sc
src/: Application.cpp  Backend.cpp  CMakeLists.txt  Container.cpp  Graphics.cpp  Renderer.cpp  SoundManager.cpp  Sprite.cpp  Texture.cpp  TextureManager.cpp  Tween.cpp  TweenManager.cpp  gmi.cpp
src/backends/bgfx/: BgfxBackend.cpp  BgfxBackend.h  BgfxTexture.cpp  BgfxTexture.h
src/backends/sdl/: SdlBackend.cpp  SdlBackend.h  SdlTexture.cpp  SdlTexture.h
src/backends/sdl_renderer/: SdlRenderer.cpp
src/client/: Application.cpp  CMakeLists.txt  Container.cpp  Graphics.cpp  Renderer.cpp  SoundManager.cpp  Sprite.cpp  Text.cpp  TextureManager.cpp  TweenManager.cpp  gmi.cpp
src/client/shaders/color/: vs_color.sc
src/client/shaders/sprite/: fs_sprite.sc
src/internal/: utils.cpp  utils.h
src/math/: BitStream.cpp  CMakeLists.txt  Shape.cpp  collision.cpp
src/misc/: BitStream.cpp  CMakeLists.txt
src/shaders/: shaders.h
src/util/: CMakeLists.txt
tests/: CMakeLists.txt  bitStreamTest.cpp  grid.test.cpp  gridTest.cpp
tools/spritesheetc/: CMakeLists.txt  spritesheetc.cpp  spritesheetc.h
